将 TabPane 字体设置为 ui font； 为 RecentFiles 内 list 加锁，保证线程安全